Modify select day feature to support multiple days.
- Day has been modified to days in config/user_data.yml file.
- Days is now an array of days.

--- a/config/user_data.yml
+++ b/config/user_data.yml
@@ -7,7 +7,8 @@
 # It just depends on chronic's limitations.
 # One caveat is that reservations can only be made 30
 # minutes in advance, so 'yesterday' will not work.
-day:
+days:
+-
 
 # Must be 30 minutes ahead of current time
 # Format must be in military time. Ex: 8:00AM should be 0800
